k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatappfrontend
  namespace: conferencia
  labels:
    app: chatappfrontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chatappfrontend
  template:
    metadata:
      labels:
        app: chatappfrontend
    spec:
      containers:
        - name: chatappfrontend
          image: us-central1-docker.pkg.dev/my-devops-project-392822/conferencia/chatfrontend:v4 

          ports:
            - containerPort: 80
