k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatappfrontend-svc
  namespace: conferencia
spec:
  selector:
    app: chatappfrontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  #type: LoadBalancer
