k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatapp-frontend-ingress
  namespace: conferencia
  annotations:
    kubernetes.io/ingress.name: "nginx"

spec:
  rules:
    - host: ""
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /
            backend:
              service:
                name: chatappfrontend-svc
                port:
                  number: 80
